# HorRAGor1

./: .env.example  .gitignore  PREFECT-ORCHESTRATION.md  README.md  check_imdb.py  main.py  pyproject.toml
config/: settings.py
db/: database.py  init_db.py  seed.py
docs/: livrables.md  logbook.md  presentation.md
docs/merise/: mcd.dot  merise.md  mld.mmd  mpd.mmd
docs/samples/: horragor_gold_sample.parquet
scripts/: check_imdb.py
src/horragor/: __init__.py  __main__.py  flow.py  orchestrator.py  pipeline.py
src/horragor/config/: paths.py  settings.py
src/horragor/db/: database.py  models.py  schema.sql  seed.py
src/horragor/ingestion/imdb/: db_builder.py  downloader.py  extractor.py  imdb_downloader.py  imdb_extractor.py  imdb_transformer.py  transformer.py
src/horragor/ingestion/kaggle/: extractor.py  kaggle_extractor.py  kaggle_transformer.py  (+1 more)
src/horragor/load/: __init__.py  db_loader.py  gold_loader.py
src/horragor/pipeline/: main.py  main2.py  normalizer.py
src/horragor/reconciliation/: __init__.py  adapters.py  gold.py  matcher.py  schema.py
src/horragor/transform/: __init__.py  saver.py
src/ingestion/imdb/: imdb_loader.py
src/ingestion/kaggle/: kaggle_mapper.py  kaggle_transformer.py
src/ingestion/tmdb/: tmdb_client.py  tmdb_extractor.py  tmdb_mapper.py
src/models/: movies.py
src/pipeline/: loader.py  main.py  main2.py
tests/: test_adapters.py  test_flow.py  test_gold.py  test_gold_loader.py  test_matcher.py  test_models.py  test_normalizer.py  test_orchestrator.py  test_rotten.py  test_schema.py  test_spark.py
(+8 files in other folders)
