[project]
name = "horragor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fuzzywuzzy>=0.18.0",
    "pandas>=3.0.2",
    "polars>=1.40.0",
    "psycopg2-binary>=2.9.11",
    "pyspark>=4.1.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-levenshtein>=0.27.3",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
horragor = "cli:main"